# Proactive-thesis

./: .cursorignore  .gitignore  CLAUDE.md  COMMIT_MESSAGE.md  PREPROCESS_REVIEW.md  README.md  git_commit_message.txt  preprocess_suggested_fixes.md  test_run_log.txt
.cursor/: mcp.json
DataIngestion/feature_extraction/: .dockerignore  .env.cloud  .env.example  .gitignore  CLEANUP_COMPLETE.md  Makefile  STRUCTURE.md  check_python_syntax.py  create_feature_data_table.sql  data_processing_config.json  db_utils_optimized.py  docker-compose.cloud.yml  docker-compose.feature.yml  docker-compose.test.yaml  final_format_fix.py  fix_formatting.py  fix_python_files.py  pipeline_status.py  pyproject.toml  run_cloud_simulation.sh  run_with_validation.sh  test_parallel_setup.py
DataIngestion/feature_extraction/benchmarks/: benchmark_requirements.txt
DataIngestion/feature_extraction/config/: README.md  data_processing_config.json
DataIngestion/feature_extraction/data_analysis/: analysis.dockerfile  config_analyser.py
DataIngestion/feature_extraction/db/: THREAD_SAFETY_IMPROVEMENTS.md  __init__.py  chunked_query.py  connection.py  metrics.py
DataIngestion/feature_extraction/docs/: PARALLEL_INGESTION_ARCHITECTURE.md  README.md
DataIngestion/feature_extraction/era_detection/: auto_era_config_gen.py  auto_era_gen.dockerfile  era_detection.dockerfile  requirements_auto_era_gen.txt  requirements_era_detection.txt  run_era_detection.py
DataIngestion/feature_extraction/era_detection_rust/: .dockerignore  Cargo.toml  DUPLICATE_KEY_FIX.md  ERA_DETECTION_IMPROVEMENTS.md  ERA_DETECTION_OPERATIONS_GUIDE.md  HYBRID_SUPPORT.md  dockerfile  test_both_storage.sh  test_fix.sh
DataIngestion/feature_extraction/examples/: pool_monitoring_demo.py
DataIngestion/feature_extraction/feature/: .dockerignore  __init__.py  config.py  db_utils.py  extract_features.py  extract_features_enhanced.py  extract_features_new.py  feature.dockerfile  feature_utils.py  feature_utils_supervised.py  requirements-gpu.txt  requirements.txt
DataIngestion/feature_extraction/feature-gpu/: .dockerignore  db_utils.py  extract_features_gpu.py  feature_gpu.dockerfile  requirements.txt  requirements_gpu.txt
DataIngestion/feature_extraction/features/: __init__.py  adapters.py  extract_features_gpu_enhanced.py  gpu_preprocessing.py
DataIngestion/feature_extraction/parallel/: README.md  coordinator.dockerfile  coordinator.py  cpu_worker.dockerfile  cpu_worker.py  gpu_worker.dockerfile  gpu_worker.py  requirements-cpu.txt  requirements-gpu.txt  requirements.txt  smart_coordinator.py  worker_base.py
DataIngestion/feature_extraction/pre_process/: .dockerignore  .pre-commit-config.yaml  .ruff.toml  MIGRATION_TO_HYBRID.md  Makefile  STORAGE_ALTERNATIVES.md  create_external_data_tables.sql  create_preprocessed_hypertable.sql  create_preprocessed_wide.sql  data_enrichment_utils.py  data_preparation_utils.py  database_operations.py  database_operations_hybrid.py  db_utils.py  fetch_energy.py  fetch_external_weather.py  make-global.ps1  make.ps1  mypy.ini  phenotype.json  phenotype.schema.json  phenotype_ingest.py  prepare_era_data.py  preprocess.dockerfile  preprocess.py  preprocess_config.json  processing_steps.py  pyproject.toml  requirements-dev.txt  requirements.txt  tsfresh_runner.py
DataIngestion/feature_extraction/tests/: README.md  test_processing_steps.py
DataIngestion/feature_extraction/utils/: README.md  validate_pipeline.py
DataIngestion/gpu_feature_extraction/: .env.example  BUG_FIXES_SUMMARY.md  CUDA_REMOVAL_SUMMARY.md  Cargo.toml  Dockerfile  Dockerfile.enhanced  Dockerfile.enhanced-fixed  HYBRID_PIPELINE_SUMMARY.md  README_ENHANCED.md  README_HYBRID.md  build.rs  edge_case_handler.rs  gpu_features_pytorch.py  minimal_gpu_features.py  requirements-gpu.txt  run_enhanced_pipeline.py  run_hybrid_pipeline.sh  simple_bridge_test.py  sparse_gpu_features.py  test_bridge_communication.py  test_minimal_features.py  test_python_bridge.py  test_python_gpu.py  test_sparse_features.py  test_sparse_minimal.py  test_sparse_validation.py
DataIngestion/gpu_feature_extraction/checkpoints/: stage3_features_20250531_153639.json  stage3_features_20250531_153708.json  stage3_features_20250531_153737.json  stage4_eras.json  stage4_eras_20250531_153639.json  stage4_eras_20250531_153708.json  stage4_eras_20250531_182137.json
DataIngestion/gpu_feature_extraction/examples/: check_cudarc_structure.rs  check_imports.rs  moea_integration.rs  test_api_methods.rs  test_cudarc_api.rs  test_device_api.rs  test_minimal_api.rs
DataIngestion/gpu_feature_extraction/src/: config.rs  data_quality.rs  db.rs  enhanced_features.rs  enhanced_sparse_pipeline.rs  external_data.rs  features.rs  features_cpu_fallback.rs  features_gpu_full.rs  features_safe.rs  hybrid_pipeline.rs  kernels.rs  lib.rs  main.rs  main_minimal.rs  pipeline.rs  python_bridge.rs  sparse_features.rs  sparse_hybrid_bridge.rs  sparse_pipeline.rs  sparse_pipeline_fix.patch
DataIngestion/model_builder/: .dockerignore  CODE_ANALYSIS_REPORT.md  DATA_INTEGRATION_ANALYSIS.md  check_db_columns.py  dockerfile  dockerfile.gpu-optimized  entrypoint.sh  pyproject.toml  simple_training_test.py  test_enhanced_training.py
DataIngestion/model_builder/models/: energy_consumption_lightgbm.txt  plant_growth_lightgbm.txt  plant_growth_model.pt  training_summary.json
DataIngestion/model_builder/src/: config.py  run_with_gpu_check.py  test_gpu.py  train_surrogate.py
DataIngestion/moea_optimizer/: Dockerfile  Dockerfile.gpu  README.md  pyproject.toml  requirements.txt  test_enhanced_integration.py
DataIngestion/moea_optimizer/config/: base.yaml  cpu_dtlz.yaml  gpu_dtlz.yaml  moea_config_cpu.toml  moea_config_cpu_full.toml  moea_config_gpu.toml  moea_config_gpu_full.toml  moea_config_test_gpu.toml
DataIngestion/moea_optimizer/src/: __init__.py  cli.py
DataIngestion/simulation_data_prep/: .dockerignore  Dockerfile  __init__.py  create_extra_dbs.sql  docker-compose.yml  mlflow.Dockerfile  orion.Dockerfile  plant_config.json  prefect.yaml  pyproject.toml  read_parguet.py  requirements.txt
(+917 files in other folders)
