[package]
name = "era_detector"
version = "0.1.0"
edition = "2021"

[dependencies]
# ---------- data ----------
polars = { version = "0.47.1", features = [
    "lazy",
    "ndarray",
    "polars-ops",     # cumulative ops, enables `cum_sum`
    "round_series",   # trait RoundSeries + RoundMode
    "parquet",
    "dtype-datetime",
    "dtype-u8",
    "dtype-categorical"
] }
ndarray = "0.15"

# ---------- models ----------
changepoint = "0.14.2"
hmmm        = { version = "0.2.0" }

# ---------- utils ----------
rand   = "0.8"
clap   = { version = "4.5.38", features = ["derive"] }
anyhow = "1.0"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
opt-level = "z" # Optimize for size
