[package]
name = "era_detector"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.10"
log = "0.4"
env_logger = "0.11"
# ---------- data ----------
polars = { version = "0.47.1", features = [
    "lazy",
    "new_streaming",
    "full",
    "dtype-full",
    "parquet",
    "round_series",
    "temporal",
    "dtype-datetime",
    "dtype-duration",
    "strings",
    "concat_str",
    "is_in",
    "cum_agg",
    "rolling_window",
    "rank",
    "abs",
    "mode",
    "cross_join",
    "zip_with",
    "pct_change",
    "propagate_nans"
] }
ndarray = "0.13.1"

# ---------- models ----------
changepoint = "0.14.2"
hmmm        = { version = "0.2.0" }

# ---------- utils ----------
rand   = "0.7.3"
clap   = { version = "4.5.38", features = ["derive"] }
anyhow = "1.0"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
opt-level = "z" # Optimize for size
