[package]
name = "era_detector"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.10"
log = "0.4"
env_logger = "0.11"
# ---------- data ----------
polars = { version = "0.48.0", features = [
    "lazy",
    "streaming",      # Replaced "new_streaming"
    "dtype-full",     # Preset for all opt-in dtypes
    "parquet",
    "round_series",
    "temporal",
    "strings",
    "concat_str",
    "is_in",
    "cum_agg",
    "rolling_window",
    "rank",
    "abs",
    "mode",
    "cross_join",
    "zip_with",
    "pct_change",
    "propagate_nans",
    "dynamic_group_by"
] }
ndarray = "0.13.1"

# ---------- models ----------
changepoint = "0.14.2"
hmmm        = { version = "0.2.0" }

# ---------- utils ----------
rand   = "0.7.3"
clap   = { version = "4.5.38", features = ["derive", "env"] }
anyhow = "1.0"
postgres = { version = "0.19", features = ["with-chrono-0_4"] }
chrono   = "0.4"
r2d2 = "0.8"
r2d2_postgres = "0.18.2"
lazy_static = "1.4"
regex = "1.10.4"


[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
opt-level = "z" # Optimize for size
