[package]
name = "data_pipeline"
version = "0.1.0"
edition = "2021"

[dependencies]
walkdir = "2.5"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
glob = "0.3"

# Added for database interaction
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
deadpool-postgres = { version = "0.12", features = ["rt_tokio_1"] }

# Added for binary COPY
pin-utils = "0.1"
byteorder = "1"
bytes = "1" # Already implicitly added by tokio?, make explicit

# Added for SinkExt trait
futures-util = "0.3"

# Added for logging
env_logger = "0.11"
log = "0.4"

# Added for parallel processing
rayon = "1.10"
crossbeam-channel = "0.5"
num_cpus = "1.16"

# Added for progress tracking
indicatif = "0.17"

# Added for performance metrics
once_cell = "1.19"
parking_lot = "0.12" 